# doordarshan-media-server-oss

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Jenkinsfile  README.md  create_tables.sql  run.sh
docs/: local-setup.md  remote-setup.md  tenant.md
src/: main.rs
src/client/: mod.rs
src/common/: mod.rs
src/dao/: mod.rs
src/data/: mod.rs
src/db/: mod.rs
src/gstreamer/: mod.rs
src/mediasoup/: mod.rs
src/mediasoupv1/: gcp_metrics.rs  metrics.rs  mod.rs
src/service/: README.md  mod.rs  payload.rs
src/service/v1/: mod.rs  openapi.rs
