[package]
name = "doordarshan-media-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["--cfg", "tokio_unstable"]

[dependencies]
anyhow = "1.0.83"
async-lock = "3.3.0"
async-trait = "0.1.80"
atomic-counter = "1.0.1"
axum = { version = "0.7.5", features = ["ws", "multipart"] }
axum-macros = "0.4.1"
axum-server = { version = "0.6.0", features = ["rustls", "tls-rustls"] }
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
mediasoup = "0.17.1"
names = "0.14.0"
nanoid = "0.4.0"
num_cpus = "1.16.0"
parking_lot = "0.12.2"
rustls = "0.23.5"
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["request-id", "add-extension", "cors", "trace", "auth", "fs"] }
uuid = "1.8.0"
hyper = { version = "1.3.1", features = ["full"] }
redis = { version = "0.25.3", features = ["cluster", "tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
redis_rs = "0.9.0"
http = "1.1.0"
mime = "0.3.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
chrono = "0.4.38"
event-listener-primitives = "2.0.1"
tokio-tungstenite = "0.21.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
mysql = "*"
sql_query_builder = { version = "2.x.x", features = ["sqlite"] }
machine-uid = "=0.5.3"
local-ip-address = "=0.6.2"
reqwest = { version = "0.12", features = ["json"] }
metrics = "0.23.0"
opentelemetry = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.25.0", features = ["http-proto", "http-json", "reqwest-client", "logs"] }
opentelemetry-http = { version = "0.25.0" }
once_cell = "1.19.0"
gstreamer = "0.23.3"
gstreamer-video = "0.23.3"
gstreamer-sdp = "0.23.2"
gstreamer-app = "0.23.3"
aws-sdk-s3 = "1.65.0"
aws-config = "1.5.10"
walkdir = "2.3.3"
console-subscriber = { version = "0.4.1" , default-features = false}
pprof = { version = "0.14", features = ["flamegraph", "frame-pointer"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = {  version = "6.0", features = ["axum"] }
